# vulgr-simple-deprecated

./: .gitignore  LICENSE  README.md  stack.yaml  vulgr-simple.cabal
app/: Main.hs
src/: Lib.hs
src/Vulgr/: Configuration.hs  DependencySpec.hs  Gradle.hs
src/Vulgr/Dependency/: Data.hs  Gradle.hs  Npm.hs
src/Vulgr/Graph/: Cypher.hs  Graphable.hs  Persist.hs
