name:                vulgr-simple
version:             0.0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/wayofthepie/vulgr-simple#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen O'Brien
maintainer:          wayofthepie@gmail.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lib
    , Vulgr.Gradle
    , Vulgr.DependencySpec
  build-depends:
    base >= 4.7 && < 5
    , aeson
    , bytestring
    , containers
    , either
    , fgl
    , hashable
    , haskell-neo4j-client
    , json-stream
    , mtl
    , parallel
    , resourcet
    , retry
    , servant
    , servant-server
    , text
    , transformers
    , unordered-containers
    , vector
    , wai
    , warp
  default-language:    Haskell2010

executable vulgr-simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -eventlog
  build-depends:       base
                     , vulgr-simple
  default-language:    Haskell2010

test-suite vulgr-simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vulgr-simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wayofthepie/vulgr-simple
